--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		$.ajax(
 			{
 				type: "GET",
-				url : "isi dengan url api gateway",
+				url : "https://b39jkabn32.execute-api.us-east-1.amazonaws.com/default/Lamda",
 				crossDomain : true,
 				contentType: "application/json",
 				success: function(data, status){
